fix(buttons): prevent overflow if the text is larger than screen
Replace `flex` with `inline-flex`. Also fix the RSS icon affected by
this change.

--- a/src/scss/helpers/mixins/_buttons.scss
+++ b/src/scss/helpers/mixins/_buttons.scss
@@ -1,8 +1,8 @@
 @mixin buttonBase {
-	display: flex;
+	display: inline-flex;
 	align-items: center;
 	justify-content: space-between;
-	width: max-content;
+	width: auto;
 	cursor: pointer;
 	font-weight: 700;
 	text-decoration: none;
